                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 28-07-2005 added: Progress dialog for nfo lookups.
 - 28-07-2005 changed: $INFO() changed to $INFO[] to avoid conflicts with () used in info fields.
 - 27-07-2005 fixed: python did not work at all after the dll update
 - 27-07-2005 fixed: Crop offset in HQ renderer with new reinterlacing active.
 - 27-07-2005 fixed: Crash in skins when you move off a window that contains the RAM control.
 - 27-07-2005 fixed: SF bug [ 1245551 ] - incorrect heading of numeric dialogs.
 - 27-07-2005 fixed: Album Information in Library view context menu is now only enabled if appropriate.
 - 27-07-2005 changed: Faster chroma upsampling for interlaced sources.
 - 27-07-2005 fixed: when a folder is added to a playlist via the web, its now added in the correct sorted order
 - 27-07-2005 enabled: support for the renderer to switch interlaced/progressive mode ona a frame to frame bases
 - 27-07-2005 changed: cleaned up the dll loader
 - 26-07-2005 added: support for the delete action in the media windows (requires file deletion be enabled)
 - 26-07-2005 added: Correct chroma upsampling for interlaced video to the HQ renderer (fixes the inverse of the "chroma bug")
 - 26-07-2005 fixed: crash going from videos -> settings or playlist via context menu.
 - 26-07-2005 fixed: tearing with High Quality PixelShader after inital interlaced sync was added
 - 26-07-2005 fixed: Audio/Video sync was way of when using the dvdplayer and syncing interlaced video
 - 26-07-2005 fixed: Possible crash when unloading dialogs from fullscreen video.
 - 26-07-2005 added: Support for syncing interlaced output through all zooming modes.  Only in the high quality renderer.